--- a/EcommAppClient/src/index.html
+++ b/EcommAppClient/src/index.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css">
+
 <!doctype html>
 <html lang="en">
 <head>
